<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="135dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewNickname"
        android:layout_width="128dp"
        android:layout_height="50dp"
        android:gravity="fill_horizontal"
        android:minHeight="55dp"
        android:padding="12dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/Nickname" />

    <TextView
        android:id="@+id/textViewTestoRecensione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:padding="30dp"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/testo_recensione" />

    <TextView
        android:id="@+id/textViewValutazione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="25dp"
        android:padding="15dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:text="@string/valutazione" />

    <ImageView
        android:id="@+id/imageStruttura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/struttura"
        android:padding="10dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

</LinearLayout>