<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewStruttura"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/immagine_struttura"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        app:srcCompat="@drawable/common_google_signin_btn_icon_disabled" />

    <TextView
        android:id="@+id/textViewNomeStruttura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/nome_struttura"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/textViewValitazione"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:gravity="center_horizontal"
        android:text="@string/valutazione" />
</LinearLayout>