<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_registrazione">

    <EditText
        android:id="@+id/editTextRipetiPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="270dp"
        android:ems="10"
        android:hint="@string/inserire_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#0C27CA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewRipetiPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/inserire_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#0C27CA"
        app:layout_constraintBottom_toTopOf="@+id/editTextRipetiPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/inserire_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColorHint="#0C27CA"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextCognome" />

    <EditText
        android:id="@+id/editTextCognome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/inserire_cognome"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#0C27CA"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewCognome"
        app:layout_constraintTop_toBottomOf="@+id/editTextNome" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/inserire_nome"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#0C27CA"
        app:layout_constraintBottom_toTopOf="@+id/editTextCognome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textViewNome"
        app:layout_constraintTop_toBottomOf="@+id/editTextNickname" />

    <TextView
        android:id="@+id/textViewRipetiPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="300dp"
        android:text="@string/ripeti_password"
        android:textColor="#0C27CA"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editTextRipetiPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassword"
        tools:text="Ripeti Password" />

    <EditText
        android:id="@+id/editTextNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/inserire_nickname"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#0C27CA"
        app:layout_constraintBottom_toTopOf="@+id/editTextNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewNickname"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistrazione" />

    <TextView
        android:id="@+id/textViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:text="@string/password"
        android:textColor="#0C27CA"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewRipetiPassword"
        app:layout_constraintEnd_toStartOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        tools:text="Password" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Email"
        android:textColor="#0C27CA"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewPassword"
        app:layout_constraintEnd_toStartOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCognome"
        tools:text="Email" />

    <TextView
        android:id="@+id/textViewCognome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Cognome"
        android:textColor="#0C27CA"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewEmail"
        app:layout_constraintEnd_toStartOf="@+id/editTextCognome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNome"
        tools:text="Cognome" />

    <TextView
        android:id="@+id/textViewRegistrazione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="696dp"
        android:text="@string/registrazione"
        android:textColor="#D8000000"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Registrazione" />

    <TextView
        android:id="@+id/textViewNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Nickname"
        android:textColor="#0C27CA"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewNome"
        app:layout_constraintEnd_toStartOf="@+id/editTextNickname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegistrazione"
        tools:text="Nickname" />

    <TextView
        android:id="@+id/textViewNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:text="@string/Nome"
        android:textColor="#0C27CA"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewCognome"
        app:layout_constraintEnd_toStartOf="@+id/editTextNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNickname"
        tools:text="Nome" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="97dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="121dp"
        android:backgroundTint="#F5EC07"
        android:onClick="Annulla_is_clicked"
        android:text="@string/Annulla"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRipetiPassword"
        tools:text="Annulla" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="115dp"
        android:layout_marginEnd="97dp"
        android:layout_marginBottom="121dp"
        android:backgroundTint="#F5EC07"
        android:onClick="Conferma_is_clicked"
        android:text="@string/conferma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/editTextRipetiPassword"
        tools:text="Conferma" />
</androidx.constraintlayout.widget.ConstraintLayout>